--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
           <a href="#"><i class="fa-solid fa-user"></i></a>
         </div>
       </header>
-    <!-- 메인 -->        
-    <div class="fixbn">
+    <!-- 메인 --> 
+         <div class="fixbn">
         <video controls width="250">
           <source
             src="images/BB_929abf64-3490-4c16-969d-99f575e1cd6f_FPpreview.mp4"
@@ -60,8 +60,8 @@
                 ><span>I</span><span>K</span><span>E</span><span>?</span>
               </h1>
               <a href="#">
-                회원가입후 고객님의 구매패턴, <br />
-                취향에 맞는 요리 정보를 만나보세요~
+                다양한<span class="pasta">파스타</span>  면 종류, <br />
+                삶는 방법도 여러가지! 여러분의 취향은?
               </a>
             </div>
             <img src="images/pastadraw.jpg" alt="요리" />
@@ -191,5 +191,7 @@
         <p>Copyright &copy; 2023 marbi</p>
       </footer>
     </div>
+      
+   
 </body>
 </html>
